--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /.idea/workspace.xml
 /.idea/workspace.xml
 /models/checkpoints/
+/models/checkpoints1/
+/models/checkpoints-CharRNN exmaple/
+/models/checkpoints-Working/
